crates/scry-chart/tests/snapshots/render_tests__render_bar_grouped.snap
---
source: crates/scry-chart/tests/render_tests.rs
assertion_line: 223
expression: summarize(&rendered)
---
canvas: 400x300, 22 commands
overlays: 12
  [0] (29, 273) Right "0"
  [1] (29, 212) Right "5"
  [2] (29, 152) Right "10"
  [3] (29, 91) Right "15"
  [4] (29, 30) Right "20"
  [5] (80, 280) Center "Q1"
  [6] (168, 280) Center "Q2"
  [7] (256, 280) Center "Q3"
  [8] (344, 280) Center "Q4"
  [9] (309, 46) Left "Series 1"
  [10] (309, 60) Left "Product B"
  [11] (212, 16) Center "Grouped Bars"
