crates/scry-chart/tests/snapshots/render_tests__render_bar_horizontal.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 17 commands
overlays: 8
  [0] (44, 278) Center "0"
  [1] (159, 278) Center "20"
  [2] (273, 278) Center "40"
  [3] (388, 278) Center "60"
  [4] (39, 70) Right "Alpha"
  [5] (39, 152) Right "Beta"
  [6] (39, 232) Right "Gamma"
  [7] (216, 16) Center "Horizontal Bars"
