crates/scry-chart/tests/snapshots/render_tests__render_bar_horizontal_stacked.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 19 commands
overlays: 9
  [0] (44, 280) Center "0"
  [1] (159, 280) Center "10"
  [2] (273, 280) Center "20"
  [3] (388, 280) Center "30"
  [4] (37, 91) Right "A"
  [5] (37, 212) Right "B"
  [6] (308, 59) Left "Series 1"
  [7] (308, 79) Left "Layer 2"
  [8] (216, 16) Center "Horizontal Stacked"
