crates/scry-chart/tests/snapshots/render_tests__render_bar_stacked.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 27 commands
text_labels: 10
  [0] 0
  [1] 10
  [2] 20
  [3] 30
  [4] A
  [5] B
  [6] C
  [7] Series 1
  [8] Layer 2
  [9] Stacked Bars
