crates/scry-chart/tests/snapshots/render_tests__render_boxplot_basic.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 43 commands
text_labels: 9
  [0] 0
  [1] 10
  [2] 20
  [3] 30
  [4] Group A
  [5] Group B
  [6] Group C
  [7] Box Plot Test
  [8] Score
