crates/scry-chart/tests/snapshots/render_tests__render_boxplot_no_outliers.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 300x250, 20 commands
text_labels: 5
  [0] 1
  [1] 2
  [2] 4
  [3] 6
  [4] X
