crates/scry-chart/tests/snapshots/render_tests__render_boxplot_per_series_color.snap
---
source: crates/scry-chart/tests/render_tests.rs
expression: summarize(&rendered)
---
canvas: 400x300, 25 commands
text_labels: 8
  [0] 1
  [1] 2
  [2] 4
  [3] 6
  [4] 8
  [5] 9
  [6] Default
  [7] Styled Boxplot
